@@ -2,43 +2,42 @@
 // Licensed under the GNU GPL Version 2.
 //
 // First added:  2005
-// Last changed: 2005-12-12
+// Last changed: 2005-12-20
 //
-// This file is used for testing out new features implemented
-// in the library, which means that the contents of this file
-// might be (should be) constantly changing. Anything can be
-// thrown into this file at any time and may also be removed
-// at any time. Use this for temporary test programs that are
-// not suitable to be implemented as demos in src/demo.
+// This file is used for testing out new features implemented in the
+// library, which means that the contents of this file is constantly
+// changing. Anything can be thrown into this file at any time. Use
+// this for simple tests that are not suitable to be implemented as
+// demos in src/demo.
 
 #include <dolfin.h>
 #include "L2Norm.h"
 
 using namespace dolfin;
 
-class MyPreconditioner : public Preconditioner
-{
-public:
-
-  MyPreconditioner(const Vector& m) : m(m) {}
-
-  void solve(Vector& x, const Vector& b)
-  {
-    dolfin_info("Calling preconditioner");
-    for (unsigned int i = 0; i < x.size(); i++)
-    {
-      x(i) = b(i) / m(i);
-    }
-  }
-
-private:
-
-  const Vector& m;
-
-};
-
 void testPreconditioner()
 {
+  class MyPreconditioner : public Preconditioner
+  {
+  public:
+    
+    MyPreconditioner(const Vector& m) : m(m) {}
+    
+    void solve(Vector& x, const Vector& b)
+    {
+      dolfin_info("Calling preconditioner");
+      for (unsigned int i = 0; i < x.size(); i++)
+      {
+	x(i) = b(i) / m(i);
+      }
+    }
+    
+  private:
+    
+    const Vector& m;
+    
+  };
+  
   UnitSquare mesh(2, 2);
   MassMatrix M(mesh);
   Vector x;
@@ -65,30 +64,30 @@ void testMatrixOutput()
   file << M;
 }
 
-class MyFunction0 : public Function
-{
-public:
-
-  real eval(const Point& p, unsigned int i)
-  {
-    return p.x;
-  }
-
-};
-
-class MyFunction1 : public Function
-{
-public:
-
-  real eval(const Point& p, unsigned int i)
-  {
-    return p.y;
-  }
-
-};
-
 void testFunctional()
 {
+  class MyFunction0 : public Function
+  {
+  public:
+    
+    real eval(const Point& p, unsigned int i)
+    {
+      return p.x;
+    }
+    
+  };
+  
+  class MyFunction1 : public Function
+  {
+  public:
+    
+    real eval(const Point& p, unsigned int i)
+    {
+      return p.y;
+    }
+    
+  };
+
   dolfin_info("Computing L2 norm of f(x, y) = x - y on the unit square.");
 
   UnitSquare mesh(16, 16);
@@ -125,12 +124,50 @@ void testProgress()
     p++;
 }
 
+void testParameters()
+{
+  class Foo : public Parametrized {};
+  class Bar : public Parametrized {};
+
+  Foo foo;
+  Bar bar;
+
+  bar.set("parent", foo);
+
+  foo.set("tolerance", 0.00007);
+  foo.set("file name", "foo.tmp");
+
+  bar.set("file name", "bar.tmp");
+  bar.set("my parameter", "bar");
+
+  cout << "global parameters:" << endl;
+  cout << "  " << get("method")    << endl;
+  cout << "  " << get("tolerance") << endl;
+  cout << "  " << get("file name") << endl;
+
+  cout << "parameters for foo: "       << endl;
+  cout << "  " << foo.get("method")    << endl;
+  cout << "  " << foo.get("tolerance") << endl;
+  cout << "  " << foo.get("file name") << endl;
+
+  cout << "parameters for bar: "          << endl;
+  cout << "  " << bar.get("method")       << endl;
+  cout << "  " << bar.get("tolerance")    << endl;
+  cout << "  " << bar.get("file name")    << endl;
+  cout << "  " << bar.get("my parameter") << endl;
+}
+
 int main(int argc, char* argv[])
 {
   dolfin_info("Testing DOLFIN...");
-  
+
+  testPreconditioner();
+  testMatrixOutput();
+  testFunctional();
+  testOutput();
   testRandom();
   testProgress();
+  testParameters();
 
   return 0;
 }
